--- a/_layout/test5.html
+++ b/_layout/test5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feed réseaux sociaux</title>
+    <title>Feed 5 réseaux sociaux</title>
     <link rel="stylesheet" href="../_styles/style5.css">
     <link rel="stylesheet" href="../_styles/styleshare2.css">
 </head>
